# snippets

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.rst  pyproject.toml
changelog.d/: 20230619_072036_pfmsoft_dev.md  20230619_073501_pfmsoft_dev.md  20230622_074744_pfmsoft_dev.md  20230625_092524_pfmsoft_state_parser_3.md
changelog.d/templates/: entry_title_template.md.j2  new_fragment.md.j2
dev_docs/: DEV-TODO.md  changelog.template.rst  dev-reference-local.md  dev-reference.md  doc_example_google.py  module_example.py  placeholders.md  project_setup.md  snippets_checklist.md
dev_docs/2023/: DEV_TODO.md  commit-reference.md  git-reference.md  google_style_docstrings.py  project-setup.md  read-the-docs.md  release-checklist.md  workflow.md
dev_docs/utilities/html_examples/: bootstrap_card.html
dev_docs/utilities/workflow_docs/: New python project workflow.md  Ubuntu_coding_environment.md  __about__template.py  build_python_from_source.md  gitignore_template  new_project_builder.sh  pylint_2.3.0.dev1_messages.txt  requirements-dev.txt  settings_template.json  setup_about_template.py  setup_template.py
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  release_checklist.rst
requirements/: dev.txt  main.txt
scripts/: .dev-tool.env  clean-build.sh  clean-pyc.sh  dev-tool.sh  sphinx-apidoc.sh  task.sh  venv-init.sh  xml-format.py
scripts/dev/: init-venv-pyproject.sh  init-venv-requirements.sh  python-clean-artifacts.sh  python-clean-build.sh  python-clean-test.sh  python-format.sh  python-pypi-release.sh  python-pypi-test.sh  sphinx-clean.sh
scripts/pdf2txt/: pdf2txt.py  pdf2txt_bulk.py
src/snippets/: __init__.py  minimal.py
src/snippets/argparse/: help_on_error.py  readable_directory.py
src/snippets/click/: check_file_output_path.py  cli_main.py  cli_main_2.py  click_message_consumer.py
src/snippets/code_generation/: codeBuildingUtils.py  code_Templates.py  dataclass_fields_string.py  dataclass_repr.py  dataclass_repr_mixin.py
src/snippets/collection/: collection_utilities.py  combine_dictionaries.py  copy_generator.py  dataclasses_to_dicts.py  distance_in_list.py  distance_in_wrapped_list.py  iterable_to_dict.py  misc.py  multi_sort.py  mutable_collection_caster.py  named_tuples_to_dicts.py  optional_object.py  search.py  wrap_range.py
src/snippets/constants/: time.py
src/snippets/datetime/: calendar.py  compare_time.py  complete_partial_datetime.py  conversions.py  date_range.py  datetime.py  datetime_from_struct_time.py  duration.py  duration_dict.py  factor_timedelta.py  factored_datetime.py  factored_duration.py  increment_year.py  instant.py  next_datetime.py  parse_datetime.py  parse_duration_pyparsing.py  parse_duration_regex.py  safe_iso_datetime.py  time_shift.py  timedelta_format.py  timedelta_source.py
src/snippets/devtools/: __init__.py
src/snippets/examples/: context_manager.py  logging_examples.py  singleton_class_example.py  type_check.py
src/snippets/file/: clean_filename.py  dataclass_to_csv.py  dataclasses_to_csv.py  dicts_to_csv.py  eve_market_orders.py  file_as_block_iterator.py  find_and_replace.py  json_mixin.py  line_count.py  line_reader.py  open_files.py  path_tmp.py  remove_blank_lines.py  validate_file_out.py
src/snippets/filter/: filtered_enumerate.py  filters.py
src/snippets/hash/: bytes_iterator_hash.py  file_hash.py
src/snippets/indexed_string/: factories.py  filters.py  index_and_filter_strings.py  index_numeric_strings.py  index_strings.py  indexed_string.py  indexed_string_dc.py  indexed_string_protocol.py  indexed_string_td.py
src/snippets/inspection/: full_name.py  inspection.py
src/snippets/logging/: logging.py  tz_aware_formatter.py  utc_formatter.py
src/snippets/math/: decimal.py  make_decimal_string.py
src/snippets/messages/: __init__.py  message.py  message_publisher.py  messenge_listener.py  messenger.py  messenger_protocol.py  publisher.py  publisher_consumer.py
src/snippets/package_resources/: resource_line_reader.py
src/snippets/parsing/: context.py  indexed_string.py  indexed_string_filter.py  messenger_parse_context.py  parse_context.py  parsed_indexed_string.py  state_parser.py
src/snippets/parsing2/: parse_exception.py  state_parser.py  state_parser_protocols.py
src/snippets/pdf/: extract_text_from_pdf_to_file.py
src/snippets/pydantic/: mixin.py
src/snippets/pyparsing/: parse_duration_pyparsing.py
src/snippets/state_parser/: parse_exception.py  state_parser.py  state_parser_protocols.py
src/snippets/string/: clean_numbers.py  indent.py  index_numeric_strings.py  indexed_string.py  indexed_string_filter.py  indexed_string_protocol.py  str_util.py
src/snippets/timers/: function_timer.py  timer_tds.py  timers.py
src/snippets/type_caster/: type_caster.py
src/snippets/xml/: format_xml_file.py
templates/: new_fragment.md.j2
tests/: logging.py
tests/snippets/: conftest.py  test_minimal.py
tests/snippets/a_utilities/: old.TestTabToCsv.py  old.codeBuildingUtils_Test.py
tests/snippets/argparse/: help_on_error_test.py  readable_directory_test.py
tests/snippets/collection/: combine_dictionaries_test.py  dataclasses_to_dicts_test.py  distance_in_list_test.py  distance_in_wrapped_list_test.py  iterable_to_dict_test.py  misc_test.py  multi_sort_test.py  mutable_collection_caster_test.py  named_tuples_to_dicts_test.py  optional_object_test.py  search_test.py  sort_test.py  wrap_range_test.py
tests/snippets/datetime/: calendar_test.py  complete_partial_datetime_test.py  conversions_test.py  datetime_test.py  duration_test.py  parse_duration_regex_test.py  timedelta_test.py
(+113 files in other folders)
